--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,10 @@
+$theme-colors: (
+  "primary": #47a2d6,
+  "danger": #ff4136
+);
+
+@import '~bootstrap/scss/bootstrap.scss';
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
