--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,8 +1,17 @@
 $theme-colors: (
   "primary": #47a2d6,
-  "danger": #ff4136
+  "danger": #ff4136,
 );
 
+$font-family-base: caudex serif;
+// $brand-primary: #0f8;
+
+// $headings-color: #f80;
+// $display-font-sizes: (
+//   1: 5rem,
+// );
+
+@import 'https://fonts.googleapis.com/css2?family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap';
 @import '~bootstrap/scss/bootstrap.scss';
 
 :root {
@@ -21,14 +30,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "caudex", "serif";
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: rgb(50, 65, 88);
 }
 
 * {
