--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,39 @@
+.masterHeading {
+  font-size: 4rem;
+}
+
 .backgroundImage {
-  background-image: url("/home/background-image.webp");
-  width: 100vw;
-  height: 200vh;
+  background-image: url("/home/Vue Du Vallon Chambres dHotes Bersac Sur Rivalier.jpg");
+  height: 100vh;
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: calc(100px + 25vh);
+}
+
+.centerPanel {
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 3rem;
+  width: fit-content;
+  border-radius: 4px;
+}
+
+@media (min-width: 750px) {
+  .backgroundImage {
+    background-image: url("/home/background-image.webp");
+  }
+}
+
+@media (min-width: 1400px) {
+  .backgroundImage {
+    background-image: url("/home/bersac chambres dhotes.jpg");
+  }
+}
+
+@media (min-width: 1580px) {
+  .backgroundImage {
+    background-image: url("/home/bersac chambres dhotes airial front.jpg");
+  }
 }
