--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -56,3 +56,72 @@ a {
     color-scheme: dark;
   }
 }
+
+.pt1 {
+  padding-top: .5rem;
+}
+
+.pt2 {
+  padding-top: 1rem;
+}
+
+.pt3 {
+  padding-top: 1.5rem;
+}
+
+.pt4 {
+  padding-top: 2rem;
+}
+
+.pl1 {
+  padding-left: .5rem;
+}
+
+.pl2 {
+  padding-left: 1rem;
+}
+
+.pl3 {
+  padding-left: 1.5rem;
+}
+
+.pl4 {
+  padding-left: 2rem;
+}
+
+.pb1 {
+  padding-bottom: .5rem;
+}
+
+.pb2 {
+  padding-bottom: 1rem;
+}
+
+.pb3 {
+  padding-bottom: 1.5rem;
+}
+
+.pb4 {
+  padding-bottom: 2rem;
+}
+
+
+.pr1 {
+  padding-right: .5rem;
+}
+
+.pr2 {
+  padding-right: 1rem;
+}
+
+.pr3 {
+  padding-right: 1.5rem;
+}
+
+.pr4 {
+  padding-right: 2rem;
+}
+
+ul {
+  margin-bottom: 0;
+}
