--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -122,6 +122,71 @@ a {
   padding-right: 2rem;
 }
 
+pt1 {
+  padding-top: .5rem;
+}
+
+.pt2 {
+  padding-top: 1rem;
+}
+
+.pt3 {
+  padding-top: 1.5rem;
+}
+
+.pt4 {
+  padding-top: 2rem;
+}
+
+.pl1 {
+  padding-left: .5rem;
+}
+
+.pl2 {
+  padding-left: 1rem;
+}
+
+.pl3 {
+  padding-left: 1.5rem;
+}
+
+.pl4 {
+  padding-left: 2rem;
+}
+
+.mb1 {
+  margin-bottom: .5rem;
+}
+
+.mb2 {
+  margin-bottom: 1rem;
+}
+
+.mb3 {
+  margin-bottom: 1.5rem;
+}
+
+.mb4 {
+  margin-bottom: 2rem;
+}
+
+
+.mr1 {
+  margin-right: .5rem;
+}
+
+.mr2 {
+  margin-right: 1rem;
+}
+
+.mr3 {
+  margin-right: 1.5rem;
+}
+
+.mr4 {
+  margin-right: 2rem;
+}
+
 ul {
   margin-bottom: 0;
 }
